fix alignment of todo items with long titles
test plan:
 - create an assignment with a long name that requires grading
 - as a student, submit to the assignment
 - ensure the teacher's todo item aligns the icon and
   assignment name properly (see screenshots in the ticket)

fixes CNVS-26349

Reviewed-on: https://gerrit.instructure.com/72955
Tested-by: Jenkins
QA-Review: Deepeeca Soundarrajan <dsoundarrajan@instructure.com>
Product-Review: Jeremy Stanley <jeremy@instructure.com>

--- a/app/stylesheets/base/_#right-side.scss
+++ b/app/stylesheets/base/_#right-side.scss
@@ -173,6 +173,10 @@
   &.to-do-list, &.events {
     i {
       width: 25px;
+      min-width: 25px;
+    }
+    .event > a {
+      display: flex;
     }
     .todo-badge-wrapper {
       display: inline-block;
@@ -184,8 +188,9 @@
     li {
       position: relative;
       a.item {
+        display: flex;
         b {
-          padding-right: 20px;
+          padding-right: 24px;
         }
       }
       a.disable_item_link {
